fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Procedure_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Outcome__c</fullName>
    <inlineHelpText>Select the outcome of the procedure.</inlineHelpText>
    <label>Procedure Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed with this device</fullName>
            </value>
            <value>
                <fullName>Completed with a different device</fullName>
            </value>
            <value>
                <fullName>Completed with another device (same model)</fullName>
            </value>
            <value>
                <fullName>Aborted due to this event</fullName>
            </value>
            <value>
                <fullName>Aborted due to same device unavailable</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>