fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <formula>Product_List__r.Description__c</formula>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>