fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Product_List__c.field-meta.xml
<CustomField>
    <fullName>Product_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product_List__c</referenceTo>
    <relationshipName>Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>