fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Product_Purchased_From__c.field-meta.xml
<CustomField>
    <fullName>Product_Purchased_From__c</fullName>
    <label>Product Purchased From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Teleflex</fullName>
            </value>
            <value>
                <fullName>Owens &amp; Minor</fullName>
            </value>
            <value>
                <fullName>Cardinal</fullName>
            </value>
            <value>
                <fullName>Medline</fullName>
            </value>
            <value>
                <fullName>PHS</fullName>
            </value>
            <value>
                <fullName>Seneca</fullName>
            </value>
            <value>
                <fullName>McKesson</fullName>
            </value>
            <value>
                <fullName>AMMA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>