fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Product_Purchased_From_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Purchased_From_Text__c</fullName>
    <inlineHelpText>Advise if the product was purchased directly from Teleflex or from a distributor (list the distributor if known). If not, list &quot;other&quot;.</inlineHelpText>
    <label>Product Purchased From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>