fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <formula>Product_List__r.Name</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>