fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Pump_used_Brand_Model_Serial__c.field-meta.xml
<CustomField>
    <fullName>Pump_used_Brand_Model_Serial__c</fullName>
    <description>Used in Cardiac Complaint Form</description>
    <label>Pump used: Brand, Model, Serial #</label>
    <type>TextArea</type>
</CustomField>