fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <inlineHelpText>If this complaint is rejected, please indicate the reason for the rejection.</inlineHelpText>
    <label>Rejection Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>