fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/RejectionDate__c.field-meta.xml
<CustomField>
    <fullName>RejectionDate__c</fullName>
    <label>RejectionDate</label>
    <type>Date</type>
</CustomField>