fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Related_treatment__c.field-meta.xml
<CustomField>
    <fullName>Related_treatment__c</fullName>
    <inlineHelpText>REQUIRED for this Section: Related treatment (e.g. surgery, debridement, antibiotics)</inlineHelpText>
    <label>Related treatment</label>
    <type>TextArea</type>
</CustomField>