fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/REMINDER__c.field-meta.xml
<CustomField>
    <fullName>REMINDER__c</fullName>
    <defaultValue>&quot;PLEASE SUBMIT ONE COMPLAINT PER: PRODUCT CODE, LOT#/SERIAL#, DEFECT, PATIENT AND EVENT DATE.&quot;</defaultValue>
    <label>REMINDER!</label>
    <type>TextArea</type>
</CustomField>