fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Replacement_Letter_Requested__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Letter_Requested__c</fullName>
    <inlineHelpText>Was replacement product requested?</inlineHelpText>
    <label>Replacement Letter Requested?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>