fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Replacement_Requested__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Requested__c</fullName>
    <label>Replacement Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>