fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/ReplacementProductRequestedfromVendo__c.field-meta.xml
<CustomField>
    <fullName>ReplacementProductRequestedfromVendo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Replacement Product Requested from Vendo</label>
    <type>Checkbox</type>
</CustomField>