fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Resolution_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Outcome__c</fullName>
    <description>Used in Cardiac Complaint Form</description>
    <label>Resolution/Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>