fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Return_Quantity_for_Investigation__c.field-meta.xml
<CustomField>
    <fullName>Return_Quantity_for_Investigation__c</fullName>
    <inlineHelpText>Enter the number of units that will be returning. If there are no units available for return, enter 0.</inlineHelpText>
    <label>Return Quantity for Investigation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>