fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/RSM__c.field-meta.xml
<CustomField>
    <fullName>RSM__c</fullName>
    <formula>Sales_Rep__r.Manager_s_Email__c</formula>
    <label>RSM Email</label>
    <type>Text</type>
</CustomField>