fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the sales rep for this account.</inlineHelpText>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>