fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Sales_Rep_Company__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Company__c</fullName>
    <formula>Sales_Rep__r.CompanyName</formula>
    <label>Sales Rep Company</label>
    <type>Text</type>
</CustomField>