fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Sales_Rep_Department__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Department__c</fullName>
    <formula>LEFT(Sales_Rep__r.UserRole.Name, 50)</formula>
    <label>Sales Rep Department</label>
    <type>Text</type>
</CustomField>