fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Sales_Rep_Info__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Info__c</fullName>
    <formula>&quot;Sales Rep Company Name:  &quot;+Sales_Rep__r.CompanyName+BR()+ &quot;Sales Rep Department:  &quot;+Sales_Rep__r.Department+BR()+ &quot;Sales Rep Email:  &quot;+Sales_Rep__r.Email+BR()+ &quot;Sales Rep Phone:  &quot;+Sales_Rep__r.MobilePhone</formula>
    <inlineHelpText>This should include rep name, Company, Department, Email and Phone. If any of that is missing, it is missing from the reps users record.</inlineHelpText>
    <label>Sales Rep Info</label>
    <type>Text</type>
</CustomField>