fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Sales_Rep_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Phone__c</fullName>
    <formula>if(NOT(ISBLANK(Sales_Rep__r.Phone)),&quot;P:&quot;+Sales_Rep__r.Phone,NULL)+
if(AND(
NOT(ISBLANK(Sales_Rep__r.Phone)),
NOT(ISBLANK(Sales_Rep__r.MobilePhone))
),&quot; &quot;,NULL)+
if(NOT(ISBLANK(Sales_Rep__r.MobilePhone)),&quot;C:&quot;+Sales_Rep__r.MobilePhone,NULL)</formula>
    <label>Sales Rep Phone</label>
    <type>Text</type>
</CustomField>