fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Second_Attempt_Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Second_Attempt_Additional_Info__c</fullName>
    <label>Second Attempt Additional Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>