fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <inlineHelpText>Please only enter one Serial#</inlineHelpText>
    <label>Serial Number (ONLY ONE SERIAL#)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>