fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Specific_Case__c.field-meta.xml
<CustomField>
    <fullName>Specific_Case__c</fullName>
    <label>Specific Case #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>