fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Specify__c.field-meta.xml
<CustomField>
    <fullName>Specify__c</fullName>
    <label>Specify</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IO</fullName>
            </value>
            <value>
                <fullName>PIV</fullName>
            </value>
            <value>
                <fullName>CVC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>