fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Specify_other_component__c.field-meta.xml
<CustomField>
    <fullName>Specify_other_component__c</fullName>
    <inlineHelpText>If &quot;other&quot; was chosen in the above question, please fill this out.</inlineHelpText>
    <label>Specify &quot;other&quot; component</label>
    <length>20</length>
    <type>Text</type>
</CustomField>