fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/SubmittedForApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>SubmittedForApprovalDate__c</fullName>
    <description>Field captures date that the complaint was first submitted for approval.</description>
    <inlineHelpText>Field captures date that the complaint was first submitted for approval.</inlineHelpText>
    <label>Submitted For Approval Date</label>
    <type>DateTime</type>
</CustomField>