fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Successful__c.field-meta.xml
<CustomField>
    <fullName>Successful__c</fullName>
    <inlineHelpText>REQUIRED for this Section</inlineHelpText>
    <label>Was the Attempt Successful?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>