fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Surgical_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Surgical_Reminder__c</fullName>
    <defaultValue>&quot;If you select Percuvance System as a product, you are required to specify the product code in the Issue/Incident Description box or this complaint will be rejected.&quot;</defaultValue>
    <description>If you select Percuvance System as a product, you are required to specify the product code in the Issue/Incident Description box or this complaint will be rejected.</description>
    <label>Surgical Reminder</label>
    <type>TextArea</type>
</CustomField>