fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/TC__c.field-meta.xml
<CustomField>
    <fullName>TC__c</fullName>
    <description>SAP TC# (Once entered in SAP)</description>
    <externalId>true</externalId>
    <inlineHelpText>SAP TC# (Once entered in SAP)</inlineHelpText>
    <label>TC#</label>
    <length>64</length>
    <type>Text</type>
</CustomField>