fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Teleflex_Aware_Date__c.field-meta.xml
<CustomField>
    <fullName>Teleflex_Aware_Date__c</fullName>
    <inlineHelpText>Select the date you were first notified of the event or alleged issue.</inlineHelpText>
    <label>Teleflex Aware Date</label>
    <type>Date</type>
</CustomField>