fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Time_of_Call__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Call__c</fullName>
    <description>Used in Cardiac Complaint Form</description>
    <label>Time of Call</label>
    <length>10</length>
    <type>Text</type>
</CustomField>