fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Time_to_Hemostasis__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Hemostasis__c</fullName>
    <description>Field added for Manta Complaint Process.</description>
    <label>Time to Hemostasis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>