fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>TEXT(Contact__r.Position_Job_Title__c)</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>