fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Todays_Date__c.field-meta.xml
<CustomField>
    <fullName>Todays_Date__c</fullName>
    <formula>TODAY()</formula>
    <label>Todays Date</label>
    <type>Date</type>
</CustomField>