fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Trigger_guard_on__c.field-meta.xml
<CustomField>
    <fullName>Trigger_guard_on__c</fullName>
    <label>Trigger guard on?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>