fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Type_of_Procedure_Being_Performed__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Procedure_Being_Performed__c</fullName>
    <inlineHelpText>What was the type of procedure being performed when the event occurred?</inlineHelpText>
    <label>Type of Procedure Being Performed</label>
    <length>30</length>
    <type>Text</type>
</CustomField>