fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Type_of_Sample_For_Investigation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Sample_For_Investigation__c</fullName>
    <label>Type of Sample For Investigation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actual</fullName>
            </value>
            <value>
                <fullName>Representative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>