fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/UDI_GTIN__c.field-meta.xml
<CustomField>
    <fullName>UDI_GTIN__c</fullName>
    <label>UDI/GTIN</label>
    <length>19</length>
    <type>Text</type>
</CustomField>