fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Units_with_Alleged_Issue__c.field-meta.xml
<CustomField>
    <fullName>Units_with_Alleged_Issue__c</fullName>
    <label># Units with Alleged Issue</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>