fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Used_or_contacted_with_Ebola_patient__c.field-meta.xml
<CustomField>
    <fullName>Used_or_contacted_with_Ebola_patient__c</fullName>
    <inlineHelpText>Has the sample ever been used or placed in contact with an Ebola patient?</inlineHelpText>
    <label>Used or contacted with Ebola patient?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>