fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/VSI_Product__c.field-meta.xml
<CustomField>
    <fullName>VSI_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the model number of the complaint product.</inlineHelpText>
    <label>VSI Product</label>
    <referenceTo>VSI_Product_Master__c</referenceTo>
    <relationshipLabel>Complaints</relationshipLabel>
    <relationshipName>Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>