fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/VSI_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>VSI_Product_Description__c</fullName>
    <formula>VSI_Product__r.Description__c</formula>
    <label>VSI Product Description</label>
    <type>Text</type>
</CustomField>