fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/VSI_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>VSI_Product_Name__c</fullName>
    <formula>VSI_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VSI Product Name</label>
    <type>Text</type>
</CustomField>