fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/VSI_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>VSI_Product_Number__c</fullName>
    <formula>VSI_Product__r.VSI_Product_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VSI Product Number</label>
    <type>Text</type>
</CustomField>