fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Was_a_back_up_driver_available__c.field-meta.xml
<CustomField>
    <fullName>Was_a_back_up_driver_available__c</fullName>
    <inlineHelpText>REQUIRED for this Section: Was a back-up driver available for insertion?</inlineHelpText>
    <label>Was a back-up driver available?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>