fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Was_a_large_amount_of_pressure_applied__c.field-meta.xml
<CustomField>
    <fullName>Was_a_large_amount_of_pressure_applied__c</fullName>
    <inlineHelpText>Was a large amount of pressure applied during insertion?</inlineHelpText>
    <label>Was a large amount of pressure applied?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>