fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Was_another_IAB_inserted__c.field-meta.xml
<CustomField>
    <fullName>Was_another_IAB_inserted__c</fullName>
    <description>Used in Cardiac Complaint Form</description>
    <label>Was another IAB inserted?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>