fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Was_Blue_Bullseye_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Was_Blue_Bullseye_Obtained__c</fullName>
    <label>Was Blue Bullseye Obtained (G4)?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Is_this_complaint_regarding_VPS_Consoles__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>