fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Was_catheter_successfully_removed__c.field-meta.xml
<CustomField>
    <fullName>Was_catheter_successfully_removed__c</fullName>
    <inlineHelpText>Was catheter successfully removed?</inlineHelpText>
    <label>Was catheter successfully removed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>