fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Was_device_removed_entirely__c.field-meta.xml
<CustomField>
    <fullName>Was_device_removed_entirely__c</fullName>
    <description>Was the device removed in its entirety?</description>
    <inlineHelpText>Was the device removed in its entirety?</inlineHelpText>
    <label>Was device removed entirely?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>