fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/was_device_resterilized_prior_event__c.field-meta.xml
<CustomField>
    <fullName>was_device_resterilized_prior_event__c</fullName>
    <inlineHelpText>Was the device re-sterilized or reprocessed prior to the alleged event?</inlineHelpText>
    <label>Was device re-sterilized prior event?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>