fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Was_green_batt_light_on_during_insertion__c.field-meta.xml
<CustomField>
    <fullName>Was_green_batt_light_on_during_insertion__c</fullName>
    <inlineHelpText>REQUIRED for this Section: Was green battery light on during insertion?</inlineHelpText>
    <label>Was green batt light on during insertion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>