fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Was_IO_acc_achieved_Needle_Cath_c__c.field-meta.xml
<CustomField>
    <fullName>Was_IO_acc_achieved_Needle_Cath_c__c</fullName>
    <label>Was IO access/biopsy achieved?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>