fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Was_IO_access_successful_Driver__c.field-meta.xml
<CustomField>
    <fullName>Was_IO_access_successful_Driver__c</fullName>
    <label>Was IO access successful (Driver)?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>