fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Was_it_successful__c.field-meta.xml
<CustomField>
    <fullName>Was_it_successful__c</fullName>
    <label>Was it successful?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>