fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Was_operator_aware_proper_removal_tecnii__c.field-meta.xml
<CustomField>
    <fullName>Was_operator_aware_proper_removal_tecnii__c</fullName>
    <inlineHelpText>Was operator aware of proper removal technique?</inlineHelpText>
    <label>Was operator aware proper rem technique?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>