fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Was_other_vascular_access_attempted__c.field-meta.xml
<CustomField>
    <fullName>Was_other_vascular_access_attempted__c</fullName>
    <inlineHelpText>Was other vascular access attempted/achieved prior to failed IO attempt?</inlineHelpText>
    <label>Was other vascular access attempted?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>