fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Was_procedure_repeated__c.field-meta.xml
<CustomField>
    <fullName>Was_procedure_repeated__c</fullName>
    <label>Was procedure repeated?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>