fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Was_Second_Attempt_Made__c.field-meta.xml
<CustomField>
    <fullName>Was_Second_Attempt_Made__c</fullName>
    <inlineHelpText>Was the same stylet used?</inlineHelpText>
    <label>Was Second Attempt Made?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Is_this_complaint_regarding_VPS_Consoles__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>