fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Was_the_device_replaced__c.field-meta.xml
<CustomField>
    <fullName>Was_the_device_replaced__c</fullName>
    <label>Was the device replaced?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>