fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Was_the_product_repaired_or_refurbished__c.field-meta.xml
<CustomField>
    <fullName>Was_the_product_repaired_or_refurbished__c</fullName>
    <inlineHelpText>Was the product repaired or refurbished prior to the discovery of the alleged defect/event?</inlineHelpText>
    <label>Was product repaired or refurbished?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>