fullSandbox11072023/force-app/main/default/objects/Complaint__c/fields/Was_therapy_delayed_interrupted__c.field-meta.xml
<CustomField>
    <fullName>Was_therapy_delayed_interrupted__c</fullName>
    <description>Used in Cardiac Complaint Form</description>
    <label>Was therapy delayed/interrupted?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>How_the_product_was_being_used__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>